--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -3,7 +3,8 @@
     justify-content: center;
     font-family: "Trebuchet MS" ;
     margin-top: 0;
-    background-color: #30302d;
+    background-color: #3B5249;
+
     height: 100px;
     width: 100%;
     position: fixed;
@@ -13,14 +14,11 @@
 .Home{
     left: auto;
     position: relative;
-    color: white;
     top: 40px;
 }
 .Projects{
-
     left: auto;
     position: relative;
-    color: white;
     padding-left: 5%;
     top: 40px;
 
@@ -29,24 +27,24 @@
 
 .AboutMe{
     position: relative;
-    color: white;
     padding-left: 5%;
     top: 40px;
-
 }
 
 .Skills{
     position: relative;
-    color: white;
     padding-left: 5%;
     top: 40px;
-
 }
 
 .contact{
     position: relative;
-    color: white;
     padding-left: 5%;
     top: 40px;
-
+}
+a{
+    color: #1e1b1e;
+}
+a:hover{
+    color: #519872;
 }
