--- a/src/Components/ExpenseTracker/ExpenseTracker.css
+++ b/src/Components/ExpenseTracker/ExpenseTracker.css
@@ -1,7 +1,7 @@
 .expense-tracker{
-    border-radius: 12px;
-    background-color: grey;
+
+    background-image: linear-gradient(to bottom, #382933,#3B5249 );
     margin: 0;
-    height: 100%;
+    height: 1000px;
     width: 100%;
 }
