--- a/src/Components/pages/Projects/Projects.css
+++ b/src/Components/pages/Projects/Projects.css
@@ -3,11 +3,12 @@
     display: flex;
     justify-content: center;
     margin: 0;
-    background-image: linear-gradient(to bottom, black, dimgrey);
+    background-image: linear-gradient(to bottom, #382933,#3B5249 );
     height: 1000px;
     width: 100%;
 }
 .expense-tracker-link{
+    margin: 5px;
     height: 40px;
     width: 100px;
 }
